--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 server:
-  port: 9000
+  port: 9082
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/eazybytes
+    url: jdbc:mysql://localhost:3309/eazybytes
     driverClassName: com.mysql.cj.jdbc.Driver
     username: root
-    password: admin123
+    password: root
